crates/fec-parser/tests/snapshots/itemizations__sd_279768_v5_3.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SD_279768.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SD",
    "form_type": "SD10",
    "filer_committee_id": "C00289603",
    "transaction_id": "D2400",
    "creditor": {
      "entity_type": "ORG",
      "organization_name": "AT&T - Payment Center",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "Payment Center",
        "street_2": null,
        "city": "Sacramento",
        "state": "CA",
        "zip_code": "958870001"
      }
    },
    "purpose_of_debt_or_obligation": "Telephone",
    "beginning_balance": 0.0,
    "incurred_amount": 32.77,
    "payment_amount": 0.0,
    "balance_at_close": 32.77,
    "committee_fec_id": null,
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  },
  {
    "family": "SD",
    "form_type": "SD10",
    "filer_committee_id": "C00289603",
    "transaction_id": "D2379",
    "creditor": {
      "entity_type": "ORG",
      "organization_name": "AT&T - Payment Center",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "Payment Center",
        "street_2": null,
        "city": "Sacramento",
        "state": "CA",
        "zip_code": "958870001"
      }
    },
    "purpose_of_debt_or_obligation": "Telephone",
    "beginning_balance": 30.22,
    "incurred_amount": 0.0,
    "payment_amount": 30.22,
    "balance_at_close": 0.0,
    "committee_fec_id": null,
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  },
  {
    "family": "SD",
    "form_type": "SD10",
    "filer_committee_id": "C00289603",
    "transaction_id": "D2410",
    "creditor": {
      "entity_type": "ORG",
      "organization_name": "The Hon. Zoe Lofgren",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "U.S. House of Representatives",
        "street_2": "635 North First Street, Ste. B",
        "city": "San Jose",
        "state": "CA",
        "zip_code": "951125110"
      }
    },
    "purpose_of_debt_or_obligation": "Reimbursement - Parking",
    "beginning_balance": 9.0,
    "incurred_amount": 0.0,
    "payment_amount": 0.0,
    "balance_at_close": 9.0,
    "committee_fec_id": null,
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  }
]
